# binance_datatool

./: .gitignore  bhds.py  pyproject.toml
api/: funding.py  kline.py
aws/: client_async.py
aws/funding/: verify.py
aws/kline/: parse.py  verify.py
config/: config.py
generate/: kline.py
util/: log_kit.py
