[project]
name = "binance-datatool"
version = "0.1.0"
description = ""
authors = [
    {name = "zhengrong",email = "rongx038@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "typer (>=0.15.1,<0.16.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "polars (>=1.23.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
